# openvino

inference-engine/cmake/: vpu_dependencies.cmake
inference-engine/samples/benchmark_app/: CMakeLists.txt  main.cpp
inference-engine/src/readers/ir_reader/: ie_ir_parser.cpp
inference-engine/src/readers/onnx_reader/: ie_onnx_reader.cpp
inference-engine/src/transformations/src/transformations/: optimize_strided_slice.cpp
inference-engine/src/transformations/src/transformations/convert_opset1_to_legacy/: convert_matmul_to_fc_or_gemm.cpp
inference-engine/src/vpu/common/src/utils/: io.cpp
inference-engine/src/vpu/graph_transformer/include/vpu/: graph_transformer.hpp
inference-engine/src/vpu/graph_transformer/src/: blob_reader.cpp  parsed_config.cpp
inference-engine/src/vpu/graph_transformer/src/backend/: dump_to_dot.cpp  serialize.cpp
inference-engine/src/vpu/graph_transformer/src/frontend/: frontend.cpp
inference-engine/src/vpu/graph_transformer/src/middleend/: pass_manager.cpp
inference-engine/src/vpu/graph_transformer/src/model/: data.cpp
inference-engine/src/vpu/graph_transformer/src/stages/: gather_elements.cpp  roi_align.cpp  static_shape_nms.cpp
inference-engine/src/vpu/myriad_plugin/: myriad_config.cpp  myriad_executable_network.cpp  myriad_plugin.cpp
inference-engine/tools/vpu/vpu_perfcheck/: CMakeLists.txt  main.cpp
model-optimizer/automation/: package_BOM.txt
ngraph/core/include/ngraph/opsets/: opset6_tbl.hpp
ngraph/src/ngraph/op/: non_max_suppression.cpp
ngraph/test/: CMakeLists.txt
(+8 files in other folders)
